--- a/styles/main.css
+++ b/styles/main.css
@@ -48,7 +48,7 @@ html, body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 10px;
-  max-width: 2500px;
+  max-width: 1500px;
   margin: 0 auto;
 }
 
