--- a/styles/nav.css
+++ b/styles/nav.css
@@ -1,8 +1,6 @@
 /* Navbar.module.css */
 
 .navbar {
-  background-color: var(--teal-background); 
-  backdrop-filter: blur(100px);
   z-index: 100;
   position: fixed;
   top: 0px;
@@ -11,12 +9,16 @@
 }
 
 .nav_container {
+  background-color: var(--teal-background); 
+  backdrop-filter: blur(100px);
+  width: 100%;
   height: 80px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin: 0 auto;
   padding: 0 80px;
+  max-width: 1500px;
 }
 
 .logo {
